--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -1,4 +1,8 @@
-<html lang="ja"><head><meta charset="utf-8"></head>
+<html lang="ja">
+  <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="login.css">
+  </head>
   <body>
     <h1>Login</h1>
 {% if form.errors %}
