--- a/authtest/templates/authtest/public.html
+++ b/authtest/templates/authtest/public.html
@@ -1,6 +1,10 @@
-<html lang="ja"><head><meta charset="utf-8"></head>
+<html lang="ja">
+  <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="public.css">
+  </head>
   <body>
-    <h1>Public</h1>
+    <h1>COMMENTs</h1>
     <p>Public contents</p>
   </body>
 </html>
