--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -1,7 +1,7 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="login.css">
+    <link rel="stylesheet" type="text/css" href="/login.css">
   </head>
   <body>
     <h1>Login</h1>
