--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -1,8 +1,10 @@
+<!DOCTYPE html>
 <html lang="ja">
-  <head>
-    <meta charset="utf-8">
+<head>
+    <meta charset = "utf-8">
     <link rel="stylesheet" type="text/css" href="/login.css">
-  </head>
+<title>Login</title>
+</head>
   <body>
     <h1>Login</h1>
 {% if form.errors %}
