--- a/authtest/templates/authtest/private.html
+++ b/authtest/templates/authtest/private.html
@@ -1,4 +1,9 @@
-<html lang="ja"><head><meta charset="utf-8"></head>
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset = "utf-8">
+<title>Home</title>
+</head>
   <body>
     <h1>Private</h1>
     <p>Super secret contents</p>
