--- a/authtest/templates/authtest/private.html
+++ b/authtest/templates/authtest/private.html
@@ -7,5 +7,21 @@
   <body>
     <h1>Private</h1>
     <p>Super secret contents</p>
+    <h1>Post new Chirp</h1>
+    <p>Chirp is an application for people to gather and talk.</p>
+    <form action="{% url 'index' %}" method="post">
+      {% csrf_token %}
+      <div>
+        <!--<label for="titleInput">Name</label><br>-->
+        <input id="titleInput" name="title" type="text" placeholder="ユーザー名">
+      </div>
+      <div>
+        <!--<label for="textInput">Text</label><br>-->
+        <textarea id="textInput" name="text" rows="3" placeholder="いま何してる？"></textarea>
+      </div>
+      <div>
+        <button type="submit" id="post-button">Chirp</button>
+      </div>
+    </form>
   </body>
 </html>
