--- a/authtest/templates/authtest/home.html
+++ b/authtest/templates/authtest/home.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset = "utf-8">
 <title>Home</title>
+<link rel="stylesheet" href="./home.css">
 </head>
 <body>
+  <header>Chat app</header>
   <h1>Home</h1>
 
   {% if user.is_authenticated %}
-  <p>Hi {{ user.username }}!</p>
+  <p>こんにちは {{ user.username }}!</p>
   <a href="{% url 'logout' %}">logout</a>
   {% else %}
   <p>You are not logged in.</p>
