--- a/authtest/templates/authtest/home.css
+++ b/authtest/templates/authtest/home.css
@@ -1,3 +1,9 @@
 header {
-    font color
+    color: blue;
+    border-color: aqua;
+    font-size: large;
+    background-color: #a7d5ec;
+    height: 30px;
+    position: fixed;
+    width: 100%;
 }
