--- a/authtest/templates/authtest/home.html
+++ b/authtest/templates/authtest/home.html
@@ -6,15 +6,14 @@
 <link rel="stylesheet" href="./home.css">
 </head>
 <body>
-  <header>Chat app</header>
-  <h1>Home</h1>
+  <header>チャットアプリ</header>
 
   {% if user.is_authenticated %}
-  <p>こんにちは {{ user.username }}!</p>
-  <a href="{% url 'logout' %}">logout</a>
+  <p>ようこそ {{ user.username }}さん!</p>
+  <a href="{% url 'logout' %}">ログアウトはこちらから</a>
   {% else %}
-  <p>You are not logged in.</p>
-  <p><a href="{% url 'login' %}">login</a></p>
+  <p>まだログイン出来ていません。</p>
+  <p><a href="{% url 'login' %}">ログインはこちらから</a></p>
   {% endif %}
 
   <hr>
