--- a/authtest/templates/authtest/edit.html
+++ b/authtest/templates/authtest/edit.html
@@ -10,7 +10,7 @@
   <body>
     <div id="header">
       <img src="{% static 'team9app/img/bird_okameinko.png' %}" alt="Logo">
-      <a href="/team9app/"><h1>Chirp</h1></a>
+      <a href="/authtest/templates/authtest/home.html"><h1>Chirp</h1></a>
     </div>
     <div class="container">
     <h1 >Edit</h1>
