--- a/authtest/templates/authtest/private.html
+++ b/authtest/templates/authtest/private.html
@@ -7,7 +7,7 @@
   <body>
     <h1>Post new Chirp</h1>
     <p>Chirp is an application for people to gather and talk.</p>
-    <form action="{% url 'index' %}" method="post">
+    <form action="{% url 'priv' %}" method="post">
       {% csrf_token %}
       <div>
         <!--<label for="titleInput">Name</label><br>-->
