--- a/authtest/templates/authtest/public.css
+++ b/authtest/templates/authtest/public.css
@@ -1,3 +1,14 @@
 h1{
     text-align: center;
 }
+
+.inner-container{
+    border-bottom: 1px solid #ccc;
+}
+
+.container{
+    width: 60vw;
+    margin-left: 20vw;
+    padding-bottom:100px;
+    
+}
