--- a/authtest/templates/authtest/detail.html
+++ b/authtest/templates/authtest/detail.html
@@ -14,7 +14,7 @@
     </div>
 
     <div class="container">
-      <h1><a href="{% url 'home' %}"><</a> Detail</h1>
+      <h1><a href="{% url 'home' %}"></a> Detail</h1>
 
     <div class="text">
       <h2>{{ article.title }} <small>{{ article.posted_at }}</small></h2>
