--- a/authtest/templates/authtest/edit.html
+++ b/authtest/templates/authtest/edit.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
   <head>    
-    <title>Edit | Chirp</title>
+    <title>Edit</title>
     <meta charset="UTF-8">
     <meta name="author" content="INIAD">
     <link href="{% static 'team9app/css/main.css' %}" rel="stylesheet">
