--- a/authtest/templates/authtest/public.html
+++ b/authtest/templates/authtest/public.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
   
-    <h1>Timeline</h1>
+    <h1>掲示板一覧</h1>
     <div>
   	  <a href="{% url 'pub' %}?sort=date">Sort by Date</a> | 
       <a href="{% url 'pub' %}?sort=like">Sort by Like</a>
