--- a/authtest/templates/authtest/home.html
+++ b/authtest/templates/authtest/home.html
@@ -1,9 +1,10 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="ja">
 <head>
     <meta charset = "utf-8">
 <title>Home</title>
-<link rel="stylesheet" type="text/css" href="home.css">
+<link href="{% static 'teamapp/css/home.css' %}" rel="stylesheet">
 </head>
 <body>
   <header>チャットアプリ</header>
