--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -1,8 +1,9 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="ja">
 <head>
     <meta charset = "utf-8">
-    <link rel="stylesheet" type="text/css" href="/login.css">
+    <link href="{% static 'team4app/css/login.css' %}" rel="stylesheet">
 <title>Login</title>
 </head>
   <body>
