--- a/authtest/templates/authtest/detail.html
+++ b/authtest/templates/authtest/detail.html
@@ -5,7 +5,7 @@
     <title>Detail | Chirp</title>
     <meta charset="UTF-8">
     <meta name="author" content="INIAD">
-    <link href="{% static 'team9app/css/main.css' %}" rel="stylesheet">
+    <link href="{% static 'team4app/css/public.css' %}" rel="stylesheet">
   </head>
   <body>
     <div id="header">
