--- a/authtest/templates/authtest/home.html
+++ b/authtest/templates/authtest/home.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset = "utf-8">
 <title>Home</title>
-<link href="{% static 'teamapp/css/home.css' %}" rel="stylesheet">
+<link href="{% static 'teama4pp/css/home.css' %}" rel="stylesheet">
 </head>
 <body>
   <header>チャットアプリ</header>
