--- a/authtest/static/team4app/css/home.css
+++ b/authtest/static/team4app/css/home.css
@@ -1,11 +1,4 @@
 h1 {
-    border-bottom: solid 1px #17194c;
+    border-bottom: solid 1px #191c7c;
 }
-#logo{
-    background-color: #17194c;
-    padding: 10px 20px 10px 20px;
-    height: 100px;
-}
-#logo img{
-    height: 100px;
-}
+
