--- a/authtest/templates/authtest/home.html
+++ b/authtest/templates/authtest/home.html
@@ -10,9 +10,9 @@
 <body>
   <div class="container">
   <div id="logo">
-    <img src="{% static 'team4app/img/iniad (1).png' %}" alt="Logo">
+    <img src="{% static 'team4app/img/掲示板.png' %}" alt="Logo">
   </div>
-  <h1>チャットアプリへようこそ！</h1>
+  <h1>掲示板へようこそ！</h1>
   {% if user.is_authenticated %}
   <p>こんにちは {{ user.username }}さん!</p>
   <p>今日の連絡を確認しましょう！</p>
