--- a/authtest/templates/authtest/public.html
+++ b/authtest/templates/authtest/public.html
@@ -9,8 +9,8 @@
   </head>
 
   <body>
+    <img src="{% static 'team4app/img/ペンギン.png' %}" alt="Logo">
     <div class="container">
-  
     <h1>掲示板一覧</h1>
     <div>
   	  <a href="{% url 'pub' %}?sort=date">日付で並び変え</a> | 
@@ -34,5 +34,6 @@
     <p>連絡はありません</p>
     {% endif %}
     </div>
+    <a id="padding" href="{% url 'home' %}"> ホームへ戻る </a>|
   </body>
 </html>
