--- a/authtest/static/team4app/css/home.css
+++ b/authtest/static/team4app/css/home.css
@@ -2,3 +2,12 @@ h1 {
     border-bottom: solid 1px #191c7c;
 }
 
+#logo{
+    padding: top 20px; ;
+    background-color: #191c7c;
+    height: 100px;
+}
+#logo img{
+    padding: 0px 20px 10px 20px;
+    height: 100px;
+}
