--- a/authtest/static/team4app/css/public.css
+++ b/authtest/static/team4app/css/public.css
@@ -1,5 +1,6 @@
 h1{
     text-align: center;
+    background-color: aqua;
 }
 
 #line-middle{
@@ -83,7 +84,12 @@ body {
 }
 
 #padding{
-    padding-left: 10px;
+    padding-left:130px;
+}
+
+#pengin{
+    width: 10%;
+    height: 10%;
 }
 
 .boxlink{
