--- a/authtest/templates/authtest/home.html
+++ b/authtest/templates/authtest/home.html
@@ -24,9 +24,8 @@
 
   <hr>
 
-  <a href="{% url 'priv' %}">プライベートルーム </a>|
-  <a href="{% url 'pub' %}"> パブリックルーム </a>|
-  <a href="{% url 'home' %}"> ホームルーム </a>|
+  <a href="{% url 'priv' %}">掲示板を書く(ログインしないと書けません) </a>|
+  <a href="{% url 'pub' %}"> 掲示板を見る </a>
   </div>
 </body>
 </html>
