--- a/authtest/templates/authtest/public.html
+++ b/authtest/templates/authtest/public.html
@@ -24,7 +24,7 @@
         <div class="text_body">{{ article.body |linebreaksbr }}</div>
         
         <a class="likelink"  onclick="like({{article.id}});">
-          ❤️ <span id="like{{article.id}}">{{ article.like }}</span>
+          ✅ <span id="like{{article.id}}">{{ article.like }}</span>
         </a>
       </div>
     
